@@ -8,3 +8,5 @@ Revision history for AstroScript
 2019-08-10 - module for calculating rise, set and transit events with example
              script.
 2020-12-20 - ability to use decimal lat/lon input
+
+2020-12-21 - Lunar phases module and script
